--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,13 @@
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__image/card__image.css);
 
+@import url(../blocks/card-popup/card-popup.css);
+@import url(..//blocks/card-popup/__image/card-popup__image.css);
+@import url(..//blocks/card-popup/__title/card-popup__title.css);
+@import url(..//blocks/cards-popup/cards-popup.css);
+
+@import url(..//blocks/popup-img-btn/popup-img-btn.css);
+
 @import url(../blocks/heart-off/heart-off.css);
 @import url(../blocks/heart-on/heart-on.css);
 
