--- a/blocks/cards-popup/__btn/cards-popup__btn.css
+++ b/blocks/cards-popup/__btn/cards-popup__btn.css
@@ -1,7 +1,7 @@
 .cards-popup__btn {
-  position: fixed;
-  top: 5%;
-  right: 8%;
+  position: absolute;
+  top: -10%;
+  right: -8%;
   background-image: url(../../../images/Close-Icon.png);
   width: 40px;
   height: 40px;
@@ -16,8 +16,8 @@
 @media screen and (min-width: 544px) and (max-width: 1024px),
   only screen and (max-width: 543px) {
   .cards-popup__btn {
-    right: 5%;
-    top: 10%;
+    right: -10%;
+    top: -15%;
     background-image: url(../../../images/closeIconMobile.png);
   }
 }
