--- a/blocks/cards-popup/__title/cards-popup__title.css
+++ b/blocks/cards-popup/__title/cards-popup__title.css
@@ -5,11 +5,5 @@
   line-height: 15px;
   margin: 0;
   position: absolute;
-  top: 90%;
-  left: 13%;
-}
-
-@media screen and (min-width: 544px) and (max-width: 1024px) {
-  .cards-popup__title {
-  }
+  bottom: -10%;
 }
