--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -4,6 +4,7 @@
   font-size: 24px;
   line-height: 29px;
   color: black;
+  padding-right: 20px;
 }
 @media only screen and (min-width: 544px) and (max-width: 1024px) {
   .card__title {
