--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,6 +4,7 @@
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 20px;
   max-width: 880px;
+  padding: 0;
 }
 @media only screen and (min-width: 544px) and (max-width: 1024px) {
   .cards {
