--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -4,12 +4,9 @@
   font-size: 24px;
   line-height: 29px;
   color: black;
+  max-width: 220px;
   padding-right: 20px;
-}
-@media only screen and (min-width: 544px) and (max-width: 1024px) {
-  .card__title {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 20px;
-  }
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
