--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,24 +1,18 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 20px;
+  grid-gap: 20px 17px;
   max-width: 880px;
-  padding: 0;
+  padding-top: 50px;
+  padding-left: 0;
+  margin: 0;
 }
-@media only screen and (min-width: 544px) and (max-width: 1024px) {
+@media screen and (max-width: 960px) {
   .cards {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    margin: 0 3%;
-  }
-}
-@media only screen and (max-width: 543px) {
-  .cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 0 4% 50px;
-    padding: 0;
+    grid-template-columns: 1fr;
+    padding-top: 36px;
+    -moz-column-gap: 0;
+    margin: 0 0 50px;
+    column-gap: 0;
   }
 }
