--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   max-width: 880px;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   position: relative;
 }
 @media only screen and (min-width: 544px) and (max-width: 1024px) {
@@ -14,7 +14,7 @@
 }
 @media only screen and (max-width: 543px) {
   .profile {
-    margin: 42px auto 36px;
+    margin: 0 auto 36px;
     flex-direction: column;
     align-items: center;
   }
